--- a/Historia.html
+++ b/Historia.html
@@ -33,7 +33,7 @@ Tim berners-lee</a> como el arquitecto de la Web, las ideas intrínsecas de su
     asociaciones se parecía más al funcionamiento (a veces errático) de
     nuestra forma mental de organizar la información que a las maneras
     tradicionales de almacenamiento, como los libros.</p>
-<p class="center"> <img src="Vannevar.jpg" ><br></p>
+<p class="center"> <img src="imagenes/Vannevar.jpg" ><br></p>
     <p class="p">Si bien los conceptos futuristas de Bush tenían un alto grado de
     predicción con lo que actualmente conocemos, la tecnología de la
     época no le permitió plasmar en la realidad sus ideas, tal como años
