--- a/Etapas.html
+++ b/Etapas.html
@@ -84,7 +84,7 @@
                 </ul>
                 </td>
                 <td>
-                    <img src="Imagenes/web1_0.png" width="400">
+                    <img src="imagenes/web1_0.png" width="400">
                 </td>
              </tr>
              <tr class="fondoTabla">
@@ -137,7 +137,7 @@
                      </ul>
                  </td>
                  <td>
-                     <img src="Imagenes/Herramientas_web_2_0.jpg" width="400">
+                     <img src="imagenes/Herramientas_web_2_0.jpg" width="400">
                  </td>
              </tr>
              <tr class="fondoTabla">
@@ -206,7 +206,7 @@
                      </ul>
                  </td>
                  <td>
-                     <img src="Imagenes/web-3.jpg" width="400">
+                     <img src="imagenes/web-3.jpg" width="400">
                              </td>
              </tr>
              <tr class="fondoTabla" >
@@ -253,7 +253,7 @@
                  </ul>
                  </td>
                  <td>
-                     <img src="Imagenes/web-4.0_internet_artech_digital.jpg" width="400">
+                     <img src="imagenes/web-4.0_internet_artech_digital.jpg" width="400">
                  </td>
              </tr>
         </table>
