--- a/BackendFrontend.html
+++ b/BackendFrontend.html
@@ -19,7 +19,7 @@
        </ul>
     <aside class="texto">
         <h2 id="Frontend">Frontend</h2>
-        <p ><img class="center" src="Imagenes/frontend.jpg" width="400"><br></p>
+        <p ><img class="center" src="imagenes/frontend.jpg" width="400"><br></p>
         <h3 class="descripcion">Es la parte del software que interactura con el usuario</h3><br>
         <h3 class="descripcion">A continuación se muestran los leguajes utilizados para desarrollar el Frontend:</h3><br>
         <ul class="descripcion">
@@ -31,7 +31,7 @@
         <aside>
         <h2 id="Backend">Backend</h2>
         
-        <p ><img src="Imagenes/FOTO-BACKEMD.png" width="400"><br></p>
+        <p ><img src="imagenes/FOTO-BACKEMD.png" width="400"><br></p>
         <h3 class="descripcion">Es la parte que maneja la lógica de las páginas web, y que los usuarios no pueden ver.</h3><br>
         <h3 class="descripcion">A continuación se muestran los leguajes utilizados para desarrollar el Backend:</h3><br>
         <ol class="descripcion">
